# transmission-env

./: .dockerignore  .gitmodules  .hud_eval.toml  Dockerfile  filter_tasks.py  generate_benchmark.py  generate_transmission_tasks.py  hud_tasks.json  mine_hud_tasks.py  pyproject.toml  remote_transmission_benchmark.json  select_tasks.py  transmission_benchmark.json
src/hud_controller/: app.py  graders.py  grading_runner.py  setup.py  spec.py  utils.py
src/hud_controller/extractors/: transmission_tasks.py
src/hud_controller/tools/: base.py  bash.py  edit.py  run.py
